# open-mmi

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_demo_mode.md  SECURITY.md  package-lock.json  package.json  playwright.config.js  pyproject.toml
.github/: pull_request_template.md
actions/: audio.py  brightness.py  keys.py  screen.py
bindings/: __init__.py  default.json
canbusd/: action_registry.py  can_runtime.py  canbusd.py  core.py  dispatcher.py  event_bus.py  event_registry.py  profile_catalogue.py  profile_replay.py  state.py  status_bus.py  status_cli.py  status_cli_dashboard.py  status_registry.py  status_rules.py
docs/: README.md  V1_ROADMAP.md  can-bus-model.md  compatibility-testing.md  dashboard.md  demo-mode.md  desktop-shell.md  getting-started.md  maintained-profile-standard.md  manual-administration.md  media-sources.md  performance-testing.md  power-management.md  profile-ownership.md  project-philosophy.md  release-checklist.md  runtime-hardening-qualification.md  runtime-hardening.md  status-snapshot.md  troubleshooting.md  v1-foundation-migration.md  vehicle-action-registry.md  vehicle-capability-matrix.md  vehicle-capture-analysis.md  vehicle-catalogue.md  vehicle-contribution-workflow.md  vehicle-event-registry.md  vehicle-integration-standard.md  vehicle-profile-scaffolding.md  vehicle-profiles.md  vehicle-qualification-workflow.md  vehicle-setup.md  vehicle-status-registry.md  vehicle-tablet-installation.md  versioning.md
powerd/: __init__.py  cli.py  daemon.py  inhibitors.py  policy.py  runtime.py  wake.py
scripts/: dev_run.sh  install.sh  manage.sh  open-mmi-desktop  open-mmi-desktop.sh  profile_provision.py  uninstall.sh  update.sh
systemd/: canbusd.service
tests/: dashboard_contract_helpers.py  test_actions.py  test_browser_test_contracts.py  test_can_runtime.py  test_canbusd_core.py  test_command_installation.py  test_config_loading.py  test_dashboard_bluetooth_media.py  test_dashboard_browser_performance_diagnostics.py  test_dashboard_contract_helpers.py  test_dashboard_frontend_versioning.py  test_dashboard_media_control_visual_consistency.py  test_dashboard_performance_contracts.py  test_dashboard_usb_media.py  test_dashboard_vehicle_ui_contracts.py  test_desktop_entry_installation.py  test_desktop_shell_assets.py  test_dispatcher.py  test_documentation_contracts.py  test_event_bus.py  test_frontend_modules.py  test_frontend_stylesheets.py  test_powerd.py  (+40 more)
(+148 files in other folders)
