[project]
name = "open-mmi"
version = "0.1.0a1"
description = "Open vehicle MMI integration framework for Linux"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "GPL-3.0-only" }

authors = [
    { name = "sheepdog-97" }
]

dependencies = [
    "python-can",
    "evdev"
]

[project.urls]
Homepage = "https://github.com/sheepdog-97/open-mmi"

[tool.setuptools]
packages = []

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
